# breadmodel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py  registry.py  settings.py
src/inference/: __init__.py  inference.py
src/routers/: __init__.py  admin.py  inference.py
