[project]
name = "breadmodel"
version = "0.1.0"
description = "Bread machine vision model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "opencv-contrib-python-headless>=4.12.0.88",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "ultralytics>=8.3.202",
]
